<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_text_add_mass_first"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:ems="16"
        android:hint="@string/enter_molecular_mass_1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_add_mass_second"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:ems="16"
        android:hint="@string/enter_molecular_mass_2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <EditText
        android:id="@+id/edit_text_add_ratio_first"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:ems="10"
        android:hint="@string/enter_ratio_1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_mass_first"

        />

    <EditText
        android:id="@+id/edit_text_add_ratio_second"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:ems="10"
        android:hint="@string/enter_ratio_2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_mass_second"

        />

    <EditText
        android:id="@+id/edit_text_add_total_mass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_total_mass"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_ratio_second"

        />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_total_mass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/formula_in_literal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate"
        />

    <TextView
        android:id="@+id/text_view_formula_digital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/formula_in_digital"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mass_first"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/text_view_output_formula"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_output_formula"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLength="9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_output_value"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mass_second"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_view_output_value"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/text_view_output_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLength="9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>